--- a/Concesionaria/index.html
+++ b/Concesionaria/index.html
@@ -2,26 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Concesionaria Salado</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Concesionaria Capullo</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Concesionaria Salado</a>
+                <a class="navbar-brand" href="#">Concesionaria Capullo</a>
+                <div id="mostrarNombre">Bienvenido al Usuario </div>
             </div>
+
         </nav>
     </div>
+    <div class="row container-fluid">
+        <div class="col-lg-4"></div>
+        <div id="demo" class="col-lg-4 my-5 text-center"><h4><strong>Ver Ofertas</strong></h4> </div>
+        <div class="col-lg-4"></div>
+    </div>
 
-    <div id="productosContenedor"></div>
+    <div class="row conainer">
+        <div class="col-lg-1"></div>
+        <div id="productosContenedor" class="col-lg-9"></div>
+        <div class="col-lg-1"></div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
