--- a/Concesionaria/compra.html
+++ b/Concesionaria/compra.html
@@ -20,23 +20,28 @@
 <body>
     <header>
         <div class="container">
-            <div class="row justify-content-between mb-5">
+            <div class="row align-items-stretch justify-content-between">
                 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                    <a class="navbar-brand" href="index.html">BODEGUITA FLORES EIRL</a>
+                    <img src="../Carrito-Compras-JavaScript-0.0.0/img/favicon.ico"
+                        style="height:105px ; margin-left: 20px;" alt="">
+                    <a class="navbar-brand" href="ind">
+                        <h4>Capullo Consecionario</h4>
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    <br>
                 </nav>
             </div>
         </div>
     </header>
+<br>
 
-    <br>
 
-    <main>
-        <div class="container">
-            <div class="row mt-3">
+    <main class="mt-5">
+        <div class="container mt-5">
+            <div class="row mt-5 pt-5">
                 <div class="col">
                     <h2 class="d-flex justify-content-center mb-3">Realizar Compra</h2>
                     <form id="procesar-pago" action="#" method="post">
@@ -50,12 +55,13 @@
                         <div class="form-group row">
                             <label for="email" class="col-12 col-md-2 col-form-label h2">Correo :</label>
                             <div class="col-12 col-md-10">
-                                <input type="text" class="form-control" id="correo" placeholder="Ingresa tu correo" name="cc_to">
+                                <input type="text" class="form-control" id="correo" placeholder="Ingresa tu correo"
+                                    name="cc_to">
                             </div>
                         </div>
 
-                        <div id="carrito" class="form-group table-responsive" >
-                            <table class="table" id="lista-compra" >
+                        <div id="carrito" class="form-group table-responsive">
+                            <table class="table" id="lista-compra">
                                 <thead>
                                     <tr>
                                         <th scope="col">Imagen</th>
@@ -67,7 +73,7 @@
                                     </tr>
 
                                 </thead>
-                                <tbody >
+                                <tbody>
 
                                 </tbody>
                                 <tr>
@@ -87,7 +93,8 @@
                                 <tr>
                                     <th colspan="4" scope="col" class="text-right">TOTAL :</th>
                                     <th scope="col">
-                                        <input id="total" name="monto" class="font-weight-bold border-0" readonly style="background-color: white;"></input>
+                                        <input id="total" name="monto" class="font-weight-bold border-0" readonly
+                                            style="background-color: white;"></input>
                                     </th>
                                     <!-- <th scope="col"></th> -->
                                 </tr>
@@ -104,7 +111,8 @@
                                 <a href="index.html" class="btn btn-info btn-block">Seguir comprando</a>
                             </div>
                             <div class="col-xs-12 col-md-4">
-                                <button href="#" class="btn btn-success btn-block" id="procesar-compra">Realizar compra</button>
+                                <a class="btn btn-success btn-block" id="procesar-compra"
+                                    onclick="compraRealizada()">Realizar compra</a>
                             </div>
                         </div>
                     </form>
